--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -7,7 +7,7 @@
     </item>
     <item>
         <shape>
-            <solid android:color="#FF5722"/>
+            <solid android:color="#2F2F2F"/>
             <corners android:radius="4dp"/>
         </shape>
     </item>
