--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_clear"
-        android:title="Itens removidos da lista"
+        android:title="Remover itens da lista"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
